# text-extract-api

./: .dockerignore  .env.example  .env.localhost.example  Dockerfile  Makefile  README.md  dev.Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  run.sh  test_security_fix.py
client/: cli.py
config/: strategies.yaml
examples/: example-word-lorem.docx
scripts/: entrypoint.sh
tests/text_extract_api/files/storage_strategies/: test_local_filesystem_security.py
text_extract_api/: celery_app.py  main.py
text_extract_api/extract/: tasks.py
text_extract_api/extract/strategies/: docling.py  ollama.py  strategy.py
text_extract_api/files/file_formats/: __init__.py  docling.py  file_format.py
text_extract_api/files/storage_strategies/: local_filesystem.py
